# bluTruth

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PREP.md  SECURITY.md  cli.py  config.py  old.pyproject.toml  pyproject.toml  release.sh  runtime.py  setup.sh
.github/: security.yml
.github/workflows/: ci.yml  docker-build.yml  security.yml
2600/: README.md  architecture.md  changelog.md  collector_design.md  hci_event_taxonomy.md  session-mar05-2026.md  session-mar09-2026.md  session-mar10-2026.md
blutruth/: __init__.py  __main__.py  bus.py  cli.py  config.py  events.py  runtime.py  web.py
blutruth/analysis/: history.py
blutruth/collectors/: __init__.py  base.py  battery.py  ble_sniffer.py  daemon_log.py  dbus_monitor.py  ebpf.py  gatt.py  hci.py  kernel_driver.py  l2ping.py  mgmt_api.py  pipewire.py  sysfs.py  ubertooth.py  udev.py
blutruth/correlation/: __init__.py  engine.py  rules.py
blutruth/enrichment/: a2dp_codecs.py  gatt_uuids.py  hci_codes.py  lmp_features.py  oui.py  smp_features.py  usb_ids.py
blutruth/rules/: audio.yaml  connection.yaml  profiles.yaml  security.yaml
blutruth/storage/: __init__.py  jsonl.py  sqlite.py
collectors/: dbus_monitor.py  hci.py
correlation/: engine.py
d0cs/: PACKAGING.md
tests/: conftest.py  test_bus.py  test_config.py  test_config_validation.py  test_correlation.py  test_dbus.py  test_enrichment.py  test_enrichment_new.py  test_events.py  test_hci_parser.py  test_rules.py  test_storage.py  test_sysfs.py
