[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blutruth"
version = "0.2.0"
description = "Bluetooth Stack Diagnostic Platform — unified timeline correlation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ryan"}]
keywords = ["bluetooth", "diagnostics", "btmon", "d-bus", "stack-tracing", "correlation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "Topic :: Software :: Monitoring",
]
repository = "https://github.com/RALaBarge/bluTruth"
documentation = "https://github.com/RALaBarge/bluTruth/blob/main/README.md"
issues = "https://github.com/RALaBarge/bluTruth/issues"

dependencies = [
    "pyyaml>=6.0",
    "dbus-next>=0.2.3",
    "aiohttp>=3.9",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
blutruth = "blutruth.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["blutruth*"]
